tests/fixtures/invalid/pow_float_float_list.py
# Cannot call pow() with Float, Float, List[int]
x = pow(1.0, 1.0, [1, 2, 3])
